# decreto3_prove

./: .gitignore  GUIDA RAPIDA IMPORTAZIONE DATI APPLICATIVO ALLEGATO 3 DM 01.docx  README.md  decreto3_eolico.py  main.py  main_versione_prova.py  pyproject.toml
.github/workflows/: python_build.yml
assets/icon/: icon.icns
decreto3eolico/: analysis_executor.py  step_executor.py
decreto3eolico/analysis/: __init__.py  activation_threshold.py  filters.py  functions.py  loaders.py  plot.py  tables_creation.py  utils.py
decreto3eolico/documentation/: __init__.py  doc_generator.py
decreto3eolico/interface/: main_window.py  pipeline_executor.py
decreto3eolico/interface/old/: main_window_old.py  main_window_versione_prova.py
decreto3eolico/interface/steps/: step_1_import.py  step_3_validazione_dati.py
decreto3eolico/interface/steps_on_gui/: gui_step_1_import.py  gui_step_3_validazione_dati.py
